--- a/main.css
+++ b/main.css
@@ -36,10 +36,30 @@ body {
     color: #e15f41;
 }
 
-.nav-cardapio .nav-link.active {
+.nav-cardapio .nav-link.active,
+#fale-conosco button {
     background-color: #e15f41;
     color: #fff;
 }
 .nav-cardapio .nav-link:hover {
     color: #e15f41;
+}
+
+.social-links li {
+    display: inline;
+    list-style: none;
+}
+
+.social-links a {
+    text-decoration: none;
+}
+
+#mensagem {
+    resize: none;
+}
+
+@media (max-width: 767px) {
+    .carousel-item img {
+        height: 280px;
+    }
 }
